export interface IListener {
  notify(data: number): void;
}
